Version 2.0.11
- How to perform scroll action #2
- Add swipe
